src/test/ui/deprecated-safe/deprecated-safe-unsafe-edition-impl.thir.stderr
error[E0200]: the trait `DeprSafe2015` requires an `unsafe impl` declaration
  --> $DIR/deprecated-safe-unsafe-edition-impl.rs:14:1
   |
LL | impl DeprSafe2015 for DeprSafeImpl {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: use of trait `deprecated_safe::DeprSafe2018` without an `unsafe impl` declaration has been deprecated as it is now an unsafe trait
  --> $DIR/deprecated-safe-unsafe-edition-impl.rs:15:1
   |
LL | impl DeprSafe2018 for DeprSafeImpl {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated_safe)]` on by default
   = note: this trait was previously not marked unsafe, but has been marked unsafe since 1.61.0
   = note: consult the trait's documentation for information on how to avoid undefined behavior
   = note: reason

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0200`.
